fixed sec. angebote padding on small screens

--- a/app/scss/styles.scss
+++ b/app/scss/styles.scss
@@ -392,7 +392,7 @@
 .angebote {
     position: relative;
     width: 100vw;
-    padding: 4rem;
+    padding: 4rem 1rem;
     
     background-image: url(../images/stones.jpg);
     background-size: cover;
@@ -402,6 +402,10 @@
     
     color: $primaryColor;
     @include flex-center(column);
+
+    @media only screen and (min-width: 31.25em) {
+        padding: 4rem;
+    }
 
     @supports not (background-attachment: fixed) {
         background-repeat: repeat;
